==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/pic32mz/uart.c <==
#include "whitecat.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#include "semphr.h"
#include <machine/pic32mz.h>
#include <pthread.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/uart.h>
#include <signal.h>
#include <stdarg.h>
#include <string.h>
#include <sys/syslog.h>
#include <sys/status.h>
#define DEBUG 0
#define UART_IRQ_INIT(name) { \
        name##E,  \
        name##RX, \
        name##TX, \
        1 << (name##E  & 31), \
        1 << (name##RX & 31), \
        1 << (name##TX & 31), \
        0x1f << (8 * (name##E  & 0x03)), \
        0x1f << (8 * (name##RX & 0x03)), \
        0x1f << (8 * (name##TX & 0x03)), \
        &IECSET(name##E  >> 5), \
        &IECSET(name##RX >> 5), \
        &IECSET(name##TX >> 5), \
        &IFSCLR(name##E  >> 5), \
        &IFSCLR(name##RX >> 5), \
        &IFSCLR(name##TX >> 5), \
        &IPCCLR(name##E  >> 2), \
        &IPCCLR(name##RX >> 2), \
        &IPCCLR(name##TX >> 2), \
        &IPCSET(name##E  >> 2), \
        &IPCSET(name##RX >> 2), \
        &IPCSET(name##TX >> 2), \
    }

void uart_init(u8_t unit, u32_t brg, u32_t mode, u32_t qs) {
    register struct uart_reg *reg;
    int rx = 0, tx = 0;

    unit--;

    // If UART is init test for current queue size. If new queue size is greater
    // delete current queue for creating a new one
    if (uart[unit].init) {
        if (qs > uart[unit].qs) {
            vQueueDelete(uart[unit].q);
            uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
        }
    } else {
        if (qs) {
            uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
        } else {
            uart[unit].q = NULL;
        }
    }
    
    uart[unit].qs = qs; 
    
    // Enable module
    switch (unit) {
        case 0: PMD5CLR = U1MD; break;
        case 1: PMD5CLR = U2MD; break;
        case 2: PMD5CLR = U3MD; break;
        case 3: PMD5CLR = U4MD; break;
        case 4: PMD5CLR = U5MD; break;
        case 5: PMD5CLR = U6MD; break;
    }
    
    reg = uart[unit].regs;
    
    reg->brg = ((double)PBCLK2_HZ / (double)(brg * 16)) - 1;
    reg->sta = 0;
    reg->mode = mode | PIC32_UMODE_ON; // UART Enable

    // Assign rx / tx pins
    switch (unit) {
        case 0:
            rx = (UART1_PINS & 0xff00) >> 8;
            tx = UART1_PINS & 0x00ff;
            break;
        case 1:
            rx = (UART2_PINS & 0xff00) >> 8;
            tx = UART2_PINS & 0x00ff;
            break;
        case 2:
            rx = (UART3_PINS & 0xff00) >> 8;
            tx = UART3_PINS & 0x00ff;
            break;
        case 3:
            rx = (UART4_PINS & 0xff00) >> 8;
            tx = UART4_PINS & 0x00ff;
            break;
        case 4:
            rx = (UART5_PINS & 0xff00) >> 8;
            tx = UART5_PINS & 0x00ff;
            break;
        case 5:
            rx = (UART6_PINS & 0xff00) >> 8;
            tx = UART6_PINS & 0x00ff;
            break;
    }

    assign_rx(unit, rx);
    assign_tx(unit, tx);
    
    reg->staset = PIC32_USTA_URXEN |       // Receiver Enable
  	          PIC32_USTA_UTXEN |	   // Transmit Enable
                  PIC32_USTA_URXISEL_NEMP;

    if (!uart[unit].console) {
        syslog(LOG_INFO, "%s: at pins rx=%c%d/tx=%c%d",uart[unit].name,
                gpio_portname(rx), gpio_pinno(rx),
                gpio_portname(tx), gpio_pinno(tx));

        syslog(LOG_INFO, "%s: speed %d bauds",uart[unit].name,brg);
    }

    uart[unit].init = 1;
}

void uart_init_interrupts(u8_t unit) {
    register struct uart_irq *uirq;

    unit--;

    if (uart[unit].irq_init) {
        return;
    }

    uirq = &uart[unit].irqs;

    *uirq->clear_er_ipc = uirq->ipc_er_mask;
    *uirq->clear_rx_ipc = uirq->ipc_rx_mask;
  //  *uirq->clear_tx_ipc = uirq->ipc_tx_mask;

    *uirq->enable_er_ipc = uirq->ipc_er_mask & 0x08080808;
    *uirq->enable_rx_ipc = uirq->ipc_rx_mask & 0x08080808;
//    *uirq->enable_tx_ipc = uirq->ipc_tx_mask & 0x08080808;

    *uirq->enable_er_intr = uirq->er_mask;
    *uirq->enable_rx_intr = uirq->rx_mask;
    //*uirq->enable_tx_intr = uirq->tx_mask;

    uart[unit].irq_init = 1;

    if (!uart[unit].console) {
		syslog(LOG_INFO, "%s: interrupts %d/%d/%d",uart[unit].name,
              uart[unit].irqs.rx,uart[unit].irqs.tx,uart[unit].irqs.er);
	}
}

void uart_write(u8_t unit, char byte) {
    register struct uart_reg *reg;

    unit--;
    reg = uart[unit].regs;

    while (reg->sta & PIC32_USTA_UTXBF);
    reg->txreg = byte;
    
    if (uart[unit].debug) {
        uart_write(CONSOLE_UART, byte);
    }
}

void uart_writes(u8_t unit, char *s) {
    register struct uart_reg *reg;

    unit--;
    reg = uart[unit].regs;

    while (*s) {
        while (reg->sta & PIC32_USTA_UTXBF);
        reg->txreg = *s;

        if (uart[unit].debug) {
            uart_write(CONSOLE_UART, *s);
        }

        s++;
   }
}
