==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/esp8266/uart.c <==
#include "whitecat.h"
#include <FreeRTOS.h>
#include <queue.h>
#include <stdio.h>
#include <stdarg.h>
#include <signal.h>
#include <pthread.h>
#include <sys/drivers/uart.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/console.h>
#include <sys/drivers/cpu.h>
#include <sys/syslog.h>
#include <sys/status.h>
#define UART_FLAG_INIT		(1 << 1)
#define UART_FLAG_IRQ_INIT	(1 << 2)
#define UART_OUTPUT_NONE 		 0
#define UART_OUTPUT_DEFAULT 	(1 << 0)
#define UART_OUTPUT_ALTERNATE 	(1 << 1)

void uart_init(u8_t unit, u32_t brg, u32_t mode, u32_t qs) {
	u8_t rx, tx;
	
    unit--;
	
	// If requestes queue size is greater than current size, delete queue and create
	// a new one
    if (qs > uart[unit].qs) {
		if (uart[unit].q) {
			vQueueDelete(uart[unit].q);
		}
		
		uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
	}
	
	uart_pin_config(uart[unit].phys, &rx, &tx);

	if (!uart0_swaped) {
		syslog(LOG_INFO, "%s: at pins rx=%s/tx=%s", names[unit], cpu_pin_name(rx), cpu_pin_name(tx));
		syslog(LOG_INFO, "%s: speed %d bauds",names[unit], brg);  
	}  

	uart_update_params(uart[unit].phys, brg, UART_WordLength_8b, USART_Parity_None, USART_StopBits_1);
	
    uart[unit].brg = brg; 
    uart[unit].qs  = qs; 

    uart[unit].flags |= UART_FLAG_INIT;
}

void uart_init_interrupts(u8_t unit) {
    UART_IntrConfTypeDef uart_intr;

    unit--;

    if (uart[unit].flags & UART_FLAG_IRQ_INIT) {
        return;
    }

	// Configure interrupt
    uart_intr.UART_IntrEnMask = UART_RXFIFO_TOUT_INT_ENA | UART_FRM_ERR_INT_ENA | UART_RXFIFO_FULL_INT_ENA | UART_TXFIFO_EMPTY_INT_ENA;
    uart_intr.UART_RX_FifoFullIntrThresh = 10;
    uart_intr.UART_RX_TimeOutIntrThresh = 2;
    uart_intr.UART_TX_FifoEmptyIntrThresh = 20;

    UART_IntrConfig(unit, &uart_intr);

	_xt_isr_attach(ETS_UART_INUM, uart_rx_intr_handler);
	
    ETS_UART_INTR_ENABLE();

	int i;
	for(i=0;i<NUART;i++) {
	    uart[i].flags |= UART_FLAG_IRQ_INIT;		
	}

		//syslog(LOG_INFO, "%s: interrupts %d/%d/%d",names[unit].name,
        //      uart[unit].irqs.rx,uart[unit].irqs.tx,uart[unit].irqs.er);
}

void uart_write(u8_t unit, char byte) {
    unit--;

    while (((READ_PERI_REG(UART_STATUS(uart[unit].phys)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
    WRITE_PERI_REG(UART_FIFO(uart[unit].phys), byte);
}

void uart_writes(u8_t unit, char *s) {
    unit--;

    while (*s) {
	    while (((READ_PERI_REG(UART_STATUS(uart[unit].phys)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
	    WRITE_PERI_REG(UART_FIFO(uart[unit].phys) , *s++);
   }
}
